--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>TODO Tracker</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,21 +12,31 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+  <body class="bg-dark">
+    <div class="modal fade" id="createTaskModal" tabindex="-1" aria-labelledby="createTaskModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Create New Task</h1>
+            <h1 class="modal-title fs-5" id="createTaskModalLabel">Create New Task</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Create Task</button>
+          <div class="modal-body px-5">
+            <form action="">
+              <div class="mb-3">
+                <label for="newTaskName" class="form-label">Task Name</label>
+                <input type="text" class="form-control" id="newTaskName">
+              </div>
+              <div class="mb-3">
+                <label for="newTaskTime" class="form-label">Estimated Time to Complete in Minutes</label>
+                <input type="number" class="form-control" id="newTaskTime">
+              </div>
+              <div class="text-center my-4">
+                <button type="button" class="btn btn-secondary mx-1" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary mx-1" id="createTaskBtn" data-bs-dismiss="modal">Create Task</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -35,23 +44,16 @@
     <header>
       <div class="container d-flex justify-content-between my-5">
         <h1>My TODO Tracker</h1>
-        <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-lg btn-primary px-4" data-bs-toggle="modal" data-bs-target="#createTaskModal">
           Create Task
         </button>
       </div>
     </header>
     <main>
-      <div class="container">
-        <nav class="nav">
-          <a class="nav-link active" href="#">Todo Tasks</a>
-          <a class="nav-link" href="#">Completed Tasks</a>
-          <a class="nav-link" href="#">Deleted Tasks</a>
-        </nav>
-      </div>
-      <div class="container">
-        <div class="card task-card bg-primary my-4">
+      <div class="container px-5 pt-3" id="todoTasksContainer">
+        <div class="card task-card border-0 my-4 ps-2">
           <div class="card-body d-flex">
-            <div class="checkbox-container m-2">
+            <div class="checkbox-container my-auto mx-4">
               <input
                 class="form-check-input"
                 type="checkbox"
@@ -59,10 +61,10 @@
                 id="flexCheckDefault"
               />
             </div>
-            <div class="w-100 m-2 px-3">
-              <h4 class="card-title">First Task</h4>
-              <hr>
-              <h6 class="card-subtitle">Est. time: 10 min</h6>
+            <div class="w-100 m-2 px-2">
+              <h4 class="card-title ps-1">First Task</h4>
+              <hr class="mt-0">
+              <h6 class="card-subtitle ps-1">Time: 10 min</h6>
             </div>
           </div>
         </div>
