--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TODO Tracker</title>
+    <title>TODO List</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/89b718f093.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="bg-dark">
@@ -42,8 +43,8 @@
       </div>
     </div>
     <header>
-      <div class="container d-flex justify-content-between my-5">
-        <h1>My TODO Tracker</h1>
+      <div class="container d-flex justify-content-between my-5 px-3">
+        <h1>My TODO List</h1>
         <button type="button" class="btn btn-lg btn-primary px-4" data-bs-toggle="modal" data-bs-target="#createTaskModal">
           Create Task
         </button>
@@ -51,7 +52,7 @@
     </header>
     <main>
       <div class="container px-5 pt-3" id="todoTasksContainer">
-        <div class="card task-card border-0 my-4 ps-2">
+        <!-- <div class="card task-card task-1 border-0 my-4 ps-2">
           <div class="card-body d-flex">
             <div class="checkbox-container my-auto mx-4">
               <input
@@ -62,12 +63,15 @@
               />
             </div>
             <div class="w-100 m-2 px-2">
-              <h4 class="card-title ps-1">First Task</h4>
+              <div class="d-flex justify-content-between">
+                <h4 class="card-title ps-1">First Task</h4>
+                <i class="fa-solid fa-trash fa-lg pe-2 deleteBtn task-1" id="delete-task-1"></i>
+              </div>
               <hr class="mt-0">
-              <h6 class="card-subtitle ps-1">Time: 10 min</h6>
+              <h6 class="card-subtitle ps-1 text-muted"><i class="fa-solid fa-clock pe-2 text-muted"></i>10 min</h6>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
 
