--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/89b718f093.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
@@ -45,33 +48,15 @@
     <header>
       <div class="container d-flex justify-content-between my-5 px-3">
         <h1>My TODO List</h1>
-        <button type="button" class="btn btn-lg btn-primary px-4" data-bs-toggle="modal" data-bs-target="#createTaskModal">
+        <button type="button" class="btn btn-lg btn-primary px-5" data-bs-toggle="modal" data-bs-target="#createTaskModal">
+          <i class="fa-solid fa-circle-plus fa-lg pe-2"></i>
           Create Task
         </button>
       </div>
     </header>
     <main>
       <div class="container px-5 pt-3" id="todoTasksContainer">
-        <!-- <div class="card task-card task-1 border-0 my-4 ps-2">
-          <div class="card-body d-flex">
-            <div class="checkbox-container my-auto mx-4">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="flexCheckDefault"
-              />
-            </div>
-            <div class="w-100 m-2 px-2">
-              <div class="d-flex justify-content-between">
-                <h4 class="card-title ps-1">First Task</h4>
-                <i class="fa-solid fa-trash fa-lg pe-2 deleteBtn task-1" id="delete-task-1"></i>
-              </div>
-              <hr class="mt-0">
-              <h6 class="card-subtitle ps-1 text-muted"><i class="fa-solid fa-clock pe-2 text-muted"></i>10 min</h6>
-            </div>
-          </div>
-        </div> -->
+
       </div>
     </main>
 
